force-app/main/default/objects/OCE__FieldCoachingEvent__c/OCE__FieldCoachingEvent__c.object-meta.xml
<CustomObject>
    <description>Coaching Event records.</description>
    <label>Coaching Event</label>
    <nameField>
        <displayFormat>FCE-{00000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Coaching Events</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>