force-app/main/default/objects/OCE__FieldCoachingEvent__c/fields/OCE__AcknowledgedDate__c.field-meta.xml
<CustomField>
    <fullName>OCE__AcknowledgedDate__c</fullName>
    <description>Date when event have been acknowledged.</description>
    <inlineHelpText>Date when event have been acknowledged.</inlineHelpText>
    <label>Acknowledged Date</label>
    <type>Date</type>
</CustomField>