force-app/main/default/objects/OCE__FieldCoachingEvent__c/fields/OCE__AllMandatoryQuestionsCoachAnswered__c.field-meta.xml
<CustomField>
    <fullName>OCE__AllMandatoryQuestionsCoachAnswered__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True if all mandatory Questions on Evaluation tab are answered by Coach.</description>
    <inlineHelpText>True if all mandatory Questions on Evaluation tab are answered by Coach.</inlineHelpText>
    <label>All Mandatory Questions Coach Answered</label>
    <type>Checkbox</type>
</CustomField>