force-app/main/default/objects/OCE__FieldCoachingEvent__c/fields/OCE__AllMandatoryQuestionsEmployeeAnswered__c.field-meta.xml
<CustomField>
    <fullName>OCE__AllMandatoryQuestionsEmployeeAnswered__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True if all mandatory Questions on Evaluation tab are answered by Employee.</description>
    <inlineHelpText>True if all mandatory Questions on Evaluation tab are answered by Employee.</inlineHelpText>
    <label>All Mandatory Questions Employe Answered</label>
    <type>Checkbox</type>
</CustomField>