force-app/main/default/objects/OCE__FieldCoachingEvent__c/fields/OCE__Description__c.field-meta.xml
<CustomField>
    <fullName>OCE__Description__c</fullName>
    <description>Description of Field Coachig Event.</description>
    <inlineHelpText>Description of Field Coachig Event.</inlineHelpText>
    <label>Description</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>