force-app/main/default/objects/OCE__FieldCoachingEvent__c/fields/OCE__DevelopmentPlans__c.field-meta.xml
<CustomField>
    <fullName>OCE__DevelopmentPlans__c</fullName>
    <description>Development plan for evaluation of employee.</description>
    <inlineHelpText>Development plan for evaluation of employee.</inlineHelpText>
    <label>Development Plans</label>
    <type>TextArea</type>
</CustomField>