force-app/main/default/objects/OCE__FieldCoachingEvent__c/fields/OCE__DevelopmentPlansLong__c.field-meta.xml
<CustomField>
    <fullName>OCE__DevelopmentPlansLong__c</fullName>
    <description>Development plan for evaluation of employee. Long version</description>
    <inlineHelpText>Development plan for evaluation of employee.</inlineHelpText>
    <label>Development Plans</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>