force-app/main/default/objects/OCE__FieldCoachingEvent__c/fields/OCE__EndDate__c.field-meta.xml
<CustomField>
    <fullName>OCE__EndDate__c</fullName>
    <description>Event end (Date and time).</description>
    <inlineHelpText>Event end (Date and time).</inlineHelpText>
    <label>Event end</label>
    <type>DateTime</type>
</CustomField>