force-app/main/default/objects/OCE__FieldCoachingEvent__c/fields/OCE__FieldCoachingForm__c.field-meta.xml
<CustomField>
    <fullName>OCE__FieldCoachingForm__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to Field Coaching Form that is used for evaluation.</description>
    <inlineHelpText>Reference to Field Coaching Form that is used for evaluation.</inlineHelpText>
    <label>Coaching Template</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 AND (2 OR 3)</booleanFilter>
        <filterItems>
            <field>OCE__FieldCoachingFormTemplate__c.OCE__IsActiveAndActual__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>OCE__FieldCoachingFormTemplate__c.RecordTypeId</field>
            <operation>equals</operation>
            <value></value>
        </filterItems>
        <filterItems>
            <field>OCE__FieldCoachingFormTemplate__c.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>FieldCoaching</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>OCE__FieldCoachingFormTemplate__c</referenceTo>
    <relationshipLabel>Field Coaching Events</relationshipLabel>
    <relationshipName>FieldCoachingEvents</relationshipName>
    <type>Lookup</type>
</CustomField>