force-app/main/default/objects/OCE__FieldCoachingEvent__c/fields/OCE__FinishedDate__c.field-meta.xml
<CustomField>
    <fullName>OCE__FinishedDate__c</fullName>
    <description>Date when event have finished.</description>
    <inlineHelpText>Date when event have finished.</inlineHelpText>
    <label>Finished Date</label>
    <type>Date</type>
</CustomField>