force-app/main/default/objects/OCE__FieldCoachingEvent__c/fields/OCE__IsCoach__c.field-meta.xml
<CustomField>
    <fullName>OCE__IsCoach__c</fullName>
    <description>Determines if logged-in User owns the Event that put him in Coach position</description>
    <formula>$User.Id == OwnerId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Determines if logged-in User owns the Event that put him in Coach position</inlineHelpText>
    <label>Is Coach</label>
    <type>Checkbox</type>
</CustomField>