force-app/main/default/objects/OCE__FieldCoachingEvent__c/fields/OCE__IsEmployee__c.field-meta.xml
<CustomField>
    <fullName>OCE__IsEmployee__c</fullName>
    <description>Determines if logged-in User is marked as Employee on the Event</description>
    <formula>$User.Id == OCE__User__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Determines if logged-in User is marked as Employee on the Event</inlineHelpText>
    <label>Is Employee</label>
    <type>Checkbox</type>
</CustomField>