force-app/main/default/objects/OCE__FieldCoachingEvent__c/fields/OCE__IsSharedWithUser__c.field-meta.xml
<CustomField>
    <fullName>OCE__IsSharedWithUser__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Controls if Coaching Event should be shared with Employee.</description>
    <inlineHelpText>Controls if Coaching Event should be shared with Employee.</inlineHelpText>
    <label>Is Shared With User</label>
    <type>Checkbox</type>
</CustomField>