force-app/main/default/objects/OCE__FieldCoachingEvent__c/fields/OCE__ManagersComments__c.field-meta.xml
<CustomField>
    <fullName>OCE__ManagersComments__c</fullName>
    <description>Comments which coach puts during evaluation.</description>
    <inlineHelpText>Comments which coach puts during evaluation.</inlineHelpText>
    <label>Coach&apos;s comments</label>
    <type>TextArea</type>
</CustomField>