force-app/main/default/objects/OCE__FieldCoachingEvent__c/fields/OCE__NumberOfCoachingCalls__c.field-meta.xml
<CustomField>
    <fullName>OCE__NumberOfCoachingCalls__c</fullName>
    <description>Number Of Coaching Calls planned during evaluation process.</description>
    <inlineHelpText>Number Of Coaching Calls planned during evaluation process.</inlineHelpText>
    <label>Number Of Coaching Calls</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>