force-app/main/default/objects/OCE__FieldCoachingEvent__c/fields/OCE__OfflineCreatedByID__c.field-meta.xml
<CustomField>
    <fullName>OCE__OfflineCreatedByID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Offline Created By ID.</description>
    <inlineHelpText>Offline Created By ID.</inlineHelpText>
    <label>Offline Created By ID</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Field Coaching Events</relationshipLabel>
    <relationshipName>FieldCoachingEvents</relationshipName>
    <type>Lookup</type>
</CustomField>