force-app/main/default/objects/OCE__FieldCoachingEvent__c/fields/OCE__OfflineCreatedDate__c.field-meta.xml
<CustomField>
    <fullName>OCE__OfflineCreatedDate__c</fullName>
    <description>Offline Created Date.</description>
    <inlineHelpText>Offline Created Date.</inlineHelpText>
    <label>Offline Created Date</label>
    <type>DateTime</type>
</CustomField>