force-app/main/default/objects/OCE__FieldCoachingEvent__c/fields/OCE__OfflineLastModifiedByID__c.field-meta.xml
<CustomField>
    <fullName>OCE__OfflineLastModifiedByID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Offline Last Modified By ID.</description>
    <inlineHelpText>Offline Last Modified By ID.</inlineHelpText>
    <label>Offline Last Modified By ID</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Field Coaching Events (Offline Last Modified By ID)</relationshipLabel>
    <relationshipName>ModifiedFieldCoachingEvents</relationshipName>
    <type>Lookup</type>
</CustomField>