force-app/main/default/objects/OCE__FieldCoachingEvent__c/fields/OCE__PreviousDevelopmentPlans__c.field-meta.xml
<CustomField>
    <fullName>OCE__PreviousDevelopmentPlans__c</fullName>
    <description>Development plan for evaluation of employee from previous event.</description>
    <inlineHelpText>Development plan for evaluation of employee from previous event.</inlineHelpText>
    <label>Previous Development Plans</label>
    <type>TextArea</type>
</CustomField>