force-app/main/default/objects/OCE__FieldCoachingEvent__c/fields/OCE__PreviousDevelopmentPlansLong__c.field-meta.xml
<CustomField>
    <fullName>OCE__PreviousDevelopmentPlansLong__c</fullName>
    <description>Development plan for evaluation of employee from previous event. Long version</description>
    <inlineHelpText>Development plan for evaluation of employee from previous event.</inlineHelpText>
    <label>Previous Development Plans</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>