force-app/main/default/objects/OCE__FieldCoachingEvent__c/fields/OCE__PreviousEmployeeComments__c.field-meta.xml
<CustomField>
    <fullName>OCE__PreviousEmployeeComments__c</fullName>
    <description>Comments which employee puts during previous evaluation.</description>
    <inlineHelpText>Comments which employee puts during previous evaluation.</inlineHelpText>
    <label>Previous Employee Comments</label>
    <type>TextArea</type>
</CustomField>