force-app/main/default/objects/OCE__FieldCoachingEvent__c/fields/OCE__PreviousEmployeeCommentsLong__c.field-meta.xml
<CustomField>
    <fullName>OCE__PreviousEmployeeCommentsLong__c</fullName>
    <description>Comments which employee puts during previous evaluation. Long version</description>
    <inlineHelpText>Comments which employee puts during previous evaluation.</inlineHelpText>
    <label>Previous Employee Comments</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>