force-app/main/default/objects/OCE__FieldCoachingEvent__c/fields/OCE__PreviousManagersComments__c.field-meta.xml
<CustomField>
    <fullName>OCE__PreviousManagersComments__c</fullName>
    <description>Comments which coach put during previous evaluation.</description>
    <inlineHelpText>Comments which coach put during previous evaluation.</inlineHelpText>
    <label>Coach’s Previous Comments</label>
    <type>TextArea</type>
</CustomField>