force-app/main/default/objects/OCE__FieldCoachingEvent__c/fields/OCE__PreviousManagersCommentsLong__c.field-meta.xml
<CustomField>
    <fullName>OCE__PreviousManagersCommentsLong__c</fullName>
    <description>Comments which coach put during previous evaluation. Long version</description>
    <inlineHelpText>Comments which coach put during previous evaluation.</inlineHelpText>
    <label>Coach’s Previous Comments</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>