force-app/main/default/objects/OCE__FieldCoachingEvent__c/fields/OCE__PreviousScore__c.field-meta.xml
<CustomField>
    <fullName>OCE__PreviousScore__c</fullName>
    <description>Previous evaluation total score.</description>
    <inlineHelpText>Previous evaluation total score.</inlineHelpText>
    <label>Previous Score</label>
    <precision>9</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>