force-app/main/default/objects/OCE__FieldCoachingEvent__c/fields/OCE__StartDate__c.field-meta.xml
<CustomField>
    <fullName>OCE__StartDate__c</fullName>
    <description>Event start (Date and time).</description>
    <inlineHelpText>Event start (Date and time).</inlineHelpText>
    <label>Event start</label>
    <type>DateTime</type>
</CustomField>