force-app/main/default/objects/OCE__FieldCoachingEvent__c/fields/OCE__TemplateName__c.field-meta.xml
<CustomField>
    <fullName>OCE__TemplateName__c</fullName>
    <description>Template Name</description>
    <inlineHelpText>Template Name</inlineHelpText>
    <label>Template Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>