force-app/main/default/objects/OCE__FieldCoachingEvent__c/fields/OCE__Territories__c.field-meta.xml
<CustomField>
    <fullName>OCE__Territories__c</fullName>
    <description>The territories of the FieldCoachingEvent.</description>
    <inlineHelpText>The territories of the FieldCoachingEvent.</inlineHelpText>
    <label>Territories</label>
    <length>255</length>
    <type>Text</type>
</CustomField>