force-app/main/default/objects/OCE__FieldCoachingEvent__c/fields/OCE__TotalRating__c.field-meta.xml
<CustomField>
    <fullName>OCE__TotalRating__c</fullName>
    <description>Total score &apos;ABC&apos; indicator.</description>
    <formula>IF(OCE__TotalScore__c &lt; 40, &quot;C&quot;, IF(OCE__TotalScore__c &lt; 66, &quot;B&quot;, &quot;A&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Rating</label>
    <type>Text</type>
</CustomField>