force-app/main/default/objects/OCE__FieldCoachingEvent__c/fields/OCE__TotalScore__c.field-meta.xml
<CustomField>
    <fullName>OCE__TotalScore__c</fullName>
    <description>Evaluation total score.</description>
    <inlineHelpText>Evaluation total score.</inlineHelpText>
    <label>Total Score</label>
    <precision>9</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>