force-app/main/default/objects/OCE__FieldCoachingEvent__c/fields/OCE__User__c.field-meta.xml
<CustomField>
    <fullName>OCE__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Identifies the user, who will be evaluated.</description>
    <inlineHelpText>Identifies the user (subordinate of Coach), who will be evaluated.</inlineHelpText>
    <label>Employee</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.IsActive</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Field Coaching Events (User)</relationshipLabel>
    <relationshipName>FieldCoachingEventsEvaluated</relationshipName>
    <type>Lookup</type>
</CustomField>