force-app/main/default/objects/OCE__FieldCoachingEvent__c/recordTypes/OCE__Acknowledged.recordType-meta.xml
<RecordType>
    <fullName>OCE__Acknowledged</fullName>
    <active>true</active>
    <description>Manager can Finish event from this status.</description>
    <label>Acknowledged</label>
</RecordType>