force-app/main/default/objects/OCE__FieldCoachingEvent__c/recordTypes/OCE__Canceled.recordType-meta.xml
<RecordType>
    <fullName>OCE__Canceled</fullName>
    <active>true</active>
    <label>Canceled</label>
</RecordType>