force-app/main/default/objects/OCE__FieldCoachingEvent__c/recordTypes/OCE__EmployeeReview.recordType-meta.xml
<RecordType>
    <fullName>OCE__EmployeeReview</fullName>
    <active>true</active>
    <description>Employee review phase.</description>
    <label>Employee Review</label>
</RecordType>