force-app/main/default/objects/OCE__FieldCoachingEvent__c/recordTypes/OCE__Finished.recordType-meta.xml
<RecordType>
    <fullName>OCE__Finished</fullName>
    <active>true</active>
    <description>Coaching Event finished phase.</description>
    <label>Finished</label>
</RecordType>