force-app/main/default/objects/OCE__FieldCoachingEvent__c/recordTypes/OCE__InReview.recordType-meta.xml
<RecordType>
    <fullName>OCE__InReview</fullName>
    <active>true</active>
    <description>Status for evaluation phase of Coach.</description>
    <label>In Review</label>
</RecordType>