force-app/main/default/objects/OCE__FieldCoachingEvent__c/recordTypes/OCE__Planned.recordType-meta.xml
<RecordType>
    <fullName>OCE__Planned</fullName>
    <active>true</active>
    <description>Default status for new event</description>
    <label>Planned</label>
</RecordType>