force-app/main/default/objects/OCE__FieldCoachingEvent__c/recordTypes/OCE__SelfEvaluation.recordType-meta.xml
<RecordType>
    <fullName>OCE__SelfEvaluation</fullName>
    <active>true</active>
    <description>Evaluation phase for Employee.</description>
    <label>Self-Evaluation</label>
</RecordType>