force-app/main/default/objects/OCE__FieldCoachingEvent__c/validationRules/OCE__AcknowledgmentDisabled.validationRule-meta.xml
<ValidationRule>
    <fullName>OCE__AcknowledgmentDisabled</fullName>
    <active>true</active>
    <description>If AcknowledgementEnabled__c disabled, coach cannot publish evaluation</description>
    <errorConditionFormula>AND($Setup.OCE__FieldCoachingEventSettings__c.OCE__AcknowledgementEnabled__c = FALSE, ISPICKVAL(OCE__Status__c,&apos;Employee Review&apos;))</errorConditionFormula>
    <errorMessage>You cannot publish evaluation, because Acknowledgement setting disabled</errorMessage>
</ValidationRule>