force-app/main/default/objects/OCE__FieldCoachingEvent__c/validationRules/OCE__AcknowledgmentRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>OCE__AcknowledgmentRequired</fullName>
    <active>true</active>
    <errorConditionFormula>AND($Setup.OCE__FieldCoachingEventSettings__c.OCE__AcknowledgementEnabled__c = TRUE, $Setup.OCE__FieldCoachingEventSettings__c.OCE__AcknowledgementRequired__c = TRUE,  ISPICKVAL(OCE__Status__c,&quot;Finished&quot;), ISBLANK(OCE__AcknowledgedDate__c))</errorConditionFormula>
    <errorMessage>You cannot finish event before it was Acknowledged</errorMessage>
</ValidationRule>