force-app/main/default/objects/OCE__FieldCoachingEvent__c/validationRules/OCE__EmployeeCanNotBeChanged.validationRule-meta.xml
<ValidationRule>
    <fullName>OCE__EmployeeCanNotBeChanged</fullName>
    <active>false</active>
    <description>Employee can&apos;t be changed after the record was created.</description>
    <errorConditionFormula>AND( NOT( ISNEW() ), ISCHANGED( OCE__User__c ) )</errorConditionFormula>
    <errorDisplayField>OCE__User__c</errorDisplayField>
    <errorMessage>You cannot change employee for ongoing evaluation</errorMessage>
</ValidationRule>