force-app/main/default/objects/OCE__FieldCoachingEvent__c/validationRules/OCE__EmployeeMandatoryQuestionsRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>OCE__EmployeeMandatoryQuestionsRequired</fullName>
    <active>false</active>
    <description>Validate if all mandatory questions are scored by Employee and trigger warning/error</description>
    <errorConditionFormula>AND(ISPICKVAL(OCE__Status__c,&quot;In Review&quot;), ISPICKVAL(PRIORVALUE(OCE__Status__c),&quot;Self Evaluation&quot;), OCE__AllMandatoryQuestionsEmployeeAnswered__c = FALSE)</errorConditionFormula>
    <errorMessage>You should answer all mandatory questions, before you can change status to In Review</errorMessage>
</ValidationRule>