force-app/main/default/objects/OCE__FieldCoachingEvent__c/validationRules/OCE__EndDateIsAfterStartDate.validationRule-meta.xml
<ValidationRule>
    <fullName>OCE__EndDateIsAfterStartDate</fullName>
    <active>true</active>
    <description>Validate if end date is after start date</description>
    <errorConditionFormula>OCE__EndDate__c &lt; OCE__StartDate__c</errorConditionFormula>
    <errorMessage>You should set end date after start date</errorMessage>
</ValidationRule>