force-app/main/default/objects/OCE__FieldCoachingEvent__c/validationRules/OCE__MandatoryQuestionsRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>OCE__MandatoryQuestionsRequired</fullName>
    <active>true</active>
    <description>Validate if all mandatory questions are scored and trigger warning/error</description>
    <errorConditionFormula>OR(
                AND(
                                ISPICKVAL(PRIORVALUE(OCE__Status__c),&quot;Self Evaluation&quot;),
                    ISPICKVAL(OCE__Status__c,&quot;In Review&quot;),
                    OCE__AllMandatoryQuestionsEmployeeAnswered__c = FALSE
    ),
                AND(
                                ISPICKVAL(PRIORVALUE(OCE__Status__c),&quot;In Review&quot;),
                                OR(
                                                ISPICKVAL(OCE__Status__c,&quot;Finished&quot;),
                                                ISPICKVAL(OCE__Status__c,&quot;Employee Review&quot;)
                                ),
                    OCE__AllMandatoryQuestionsCoachAnswered__c = FALSE
                )
)</errorConditionFormula>
    <errorMessage>You should answer all mandatory questions.</errorMessage>
</ValidationRule>