force-app/main/default/objects/OCE__FieldCoachingEvent__c/validationRules/OCE__OnlyFieldCoachingTemplatesAreSupported.validationRule-meta.xml
<ValidationRule>
    <fullName>OCE__OnlyFieldCoachingTemplatesAreSupported</fullName>
    <active>true</active>
    <description>Coaching Events can only be created for Field Coaching Form Templates.</description>
    <errorConditionFormula>( NOT( ISBLANK( OCE__FieldCoachingForm__r.RecordTypeId ) )  &amp;&amp;     OCE__FieldCoachingForm__r.RecordType.DeveloperName &lt;&gt; &apos;FieldCoaching&apos; )</errorConditionFormula>
    <errorMessage>Coaching Events can only be created for Field Coaching Form Templates.</errorMessage>
</ValidationRule>