force-app/main/default/objects/OCE__FieldCoachingEvent__c/validationRules/OCE__OwnerAndEmployeeIsSameUser.validationRule-meta.xml
<ValidationRule>
    <fullName>OCE__OwnerAndEmployeeIsSameUser</fullName>
    <active>false</active>
    <description>Prevent a case when Owner and Employee is the same User</description>
    <errorConditionFormula>OwnerId = OCE__User__c</errorConditionFormula>
    <errorMessage>Event Owner and Employee cannot be the same User</errorMessage>
</ValidationRule>