force-app/main/default/objects/OCE__FieldCoachingEvent__c/validationRules/OCE__StartDateAndEndDateInPast.validationRule-meta.xml
<ValidationRule>
    <fullName>OCE__StartDateAndEndDateInPast</fullName>
    <active>true</active>
    <description>Validate If end date and start date are in past, cannot have event</description>
    <errorConditionFormula>AND(ISNEW(), DATEVALUE(OCE__EndDate__c)&lt;Today())</errorConditionFormula>
    <errorMessage>You cannot create event if the both dates are in past</errorMessage>
</ValidationRule>