force-app/main/default/objects/OCE__FieldCoachingEvent__c/validationRules/OCE__TemplateIsNotActive.validationRule-meta.xml
<ValidationRule>
    <fullName>OCE__TemplateIsNotActive</fullName>
    <active>true</active>
    <description>You cannot create event with no active template</description>
    <errorConditionFormula>AND(ISNEW(), OCE__FieldCoachingForm__r.OCE__IsActive__c = False)</errorConditionFormula>
    <errorDisplayField>OCE__FieldCoachingForm__c</errorDisplayField>
    <errorMessage>Template is not active</errorMessage>
</ValidationRule>