force-app/main/default/objects/OCE__FieldCoachingEvent__c/listViews/OCE__All.listView-meta.xml
<ListView>
    <fullName>OCE__All</fullName>
    <columns>NAME</columns>
    <columns>OCE__TemplateName__c</columns>
    <columns>OCE__User__c</columns>
    <columns>OCE__StartDate__c</columns>
    <columns>OCE__EndDate__c</columns>
    <columns>OCE__Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>